replace duplicated questions

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -180,11 +180,11 @@
             "9": "Who is your most trusted friend?",
             "10": "What made you lose track of time today?",
             "11": "What are you sure of?",
-            "12": "Why?",
+            "12": "If you could give one piece of advice to your 10-year-old self, what would it be?",
             "13": "What was your last purchase?",
             "14": "Did you compliment anyone today?",
-            "15": "How many push-ups are you able to do?",
-            "16": "What are you waiting for?",
+            "15": "What scares you but you would still like to do?",
+            "16": "How do you picture yourself in five years?",
             "17": "What is your favorite dish to cook?",
             "18": "It's never too ______________.",
             "19": "What is the most important thing that was said to you today?",
@@ -192,11 +192,11 @@
             "21": "What is the title of the last book you read?",
             "22": "What matters today?",
             "23": "What project are you working on?",
-            "24": "Without looking at what you wrote in previous years, put a signature here.",
+            "24": "What motivates you to keep going even when things get tough?",
             "25": "What is the most precious material possession you own?",
             "26": "Were you feeling good or bad today?",
             "27": "What is the smartest thing you did today?",
-            "28": "What did you find in the mailbox today?",
+            "28": "What are you most confident about?",
             "29": "Today I was ______________.",
             "30": "The last thing I bought for myself was ______________."
         },
