--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -99,7 +99,7 @@
             "26": "Qual è stata la cosa più facile oggi?",
             "27": "Hai ringraziato qualcuno oggi?",
             "28": "Hai lavorato sodo oggi?",
-            "29": "Cosa hai trovato nella cassetta della posta oggi?",
+            "29": "Cosa hai trovato nella cassetta delle lettere oggi?",
             "30": "Oggi è stato un totale ______________.",
             "31": "Cosa stai cercando?"
         },
@@ -139,7 +139,7 @@
             "1": "Chi è stato gentile con te oggi?",
             "2": "Chi è l’ultima persona con cui hai parlato?",
             "3": "Cosa ti fa sentire vivo?",
-            "4": "Il negozio che frequenti di più è ______________.",
+            "4": "Il negozio che frequento di più è ______________.",
             "5": "Come ti sei rilassato oggi?",
             "6": "Descrivi il paio di scarpe preferito che possiedi.",
             "7": "Quale regola ti condiziona di più durante il giorno?",
@@ -180,11 +180,11 @@
             "9": "Chi è il tuo amico più fidato?",
             "10": "Cosa ti ha fatto perdere la cognizione del tempo oggi?",
             "11": "Di cosa sei sicuro?",
-            "12": "Perché?",
+            "12": "Se potessi dare un consiglio al te stesso di 10 anni fa, quale sarebbe?",
             "13": "Qual è l’ultimo acquisto fatto?",
-            "14": "Hai fatto apprezzamenti a qualcuno oggi?",
-            "15": "Quanti sollevamenti sei in grado di fare?",
-            "16": "Cosa stai aspettando?",
+            "14": "Hai fatto dei complimenti a qualcuno oggi?",
+            "15": "Cosa ti spaventa ma vorresti comunque fare?",
+            "16": "Come ti immagini tra cinque anni?",
             "17": "Qual è il tuo piatto preferito da cucinare?",
             "18": "Non è mai troppo ______________.",
             "19": "Qual è la cosa più importante che ti è stata detta oggi?",
@@ -192,11 +192,11 @@
             "21": "Qual è il titolo dell’ultimo libro che hai letto?",
             "22": "Cosa importa oggi?",
             "23": "A quale progetto stai lavorando?",
-            "24": "Senza guardare ciò che hai scritto gli anni precedenti, metti una firma qui.",
+            "24": "Cosa ti motiva ad andare avanti anche quando le cose si fanno difficili?",
             "25": "Qual è il bene materiale più prezioso che possiedi?",
             "26": "Stavi bene o male oggi?",
             "27": "Qual è la cosa più intelligente che hai fatto oggi?",
-            "28": "Cosa hai trovato nella cassetta delle lettere oggi?",
+            "28": "In cosa ti senti più sicuro di te stesso?",
             "29": "Oggi ero ______________.",
             "30": "L’ultima cosa che ho acquistato per me stesso è stata ______________."
         },
