update july translations

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -201,37 +201,37 @@
             "30": "The last thing I bought for myself was ______________."
         },
         "6": {
-            "1": "Eri solo oggi?",
-            "2": "Chi è stata l’ultima persona che hai visto oggi?",
-            "3": "Cosa hai bisogno di abbandonare?",
-            "4": "Quale film vorresti vedere?",
-            "5": "Non posso/non sono in grado di ______________.",
-            "6": "A chi hai inviato un messaggio oggi?",
-            "7": "Hai giocato alla lotteria?",
-            "8": "È capitata una cosa divertente mentre ______________.",
-            "9": "Nomina una cosa che dovresti buttare, ma non lo fai.",
-            "10": "Cosa ti ha reso soddisfatto di te stesso di recente?",
-            "11": "Chi hai visto più spesso oggi?",
-            "12": "Chi ti ispira?",
-            "13": "Quanta benzina c’è in ogni tanica?",
-            "14": "Cos’ha detto il tuo oroscopo oggi? Ha azzeccato?",
-            "15": "Di cosa hai più paura?",
-            "16": "Qual è la missione più grande che hai intrapreso?",
-            "17": "Cosa sei riuscito a portare a termine oggi?",
-            "18": "Ti sei comportato da persona matura oggi?",
-            "19": "È stata una giornata impegnativa?",
-            "20": "Quali scadenze avevi?",
-            "21": "Qual è il tuo indirizzo?",
-            "22": "Cosa non vorresti ci fosse, o ce ne fosse meno, al mondo?",
-            "23": "Cosa ti ferma?",
-            "24": "Quali erano i tuoi obiettivi del giorno?",
-            "25": "Qual è stata l’ultima cosa che ti ha fatto ridere di gusto?",
-            "26": "Con chi hai cenato?",
-            "27": "In che modo hai fatto la differenza oggi?",
-            "28": "Qual è la cosa che porti ovunque con te?",
-            "29": "C'è qualcuno che ti manca in questo momento?",
-            "30": "Cosa ti ha motivato oggi?",
-            "31": "Chi è il tuo amico più folle?"
+            "1": "Were you alone today?",
+            "2": "Who was the last person you saw today?",
+            "3": "What do you need to let go of?",
+            "4": "What movie would you like to watch?",
+            "5": "I can't/I am not able to ______________.",
+            "6": "Who did you send a message to today?",
+            "7": "What is a question you are searching for an answer to in your life?",
+            "8": "Something funny happened while ______________.",
+            "9": "Name one thing you should throw away, but you don't.",
+            "10": "What has made you satisfied with yourself recently?",
+            "11": "Who did you see most often today?",
+            "12": "Who inspires you?",
+            "13": "Did you talk to a friend today?",
+            "14": "If you could travel anywhere in the world, where would you go?",
+            "15": "What are you most afraid of?",
+            "16": "Did you ask anyone for help today?",
+            "17": "What did you manage to accomplish today?",
+            "18": "Did you behave like a mature person today?",
+            "19": "Was it a busy day?",
+            "20": "What deadlines did you have?",
+            "21": "What is the first thing you do in the morning?",
+            "22": "What would you not want to exist, or have less of, in the world?",
+            "23": "What is stopping you?",
+            "24": "What were your goals for the day?",
+            "25": "What was the last thing that made you laugh out loud?",
+            "26": "Who did you have dinner with?",
+            "27": "How did you make a difference today?",
+            "28": "What is the thing you carry everywhere with you?",
+            "29": "Is there someone you miss right now?",
+            "30": "What motivated you today?",
+            "31": "Who is your craziest friend?"
         },
         "7": {
             "1": "Cosa hai mangiato a pranzo oggi?",
