--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -207,21 +207,21 @@
             "4": "Quale film vorresti vedere?",
             "5": "Non posso/non sono in grado di ______________.",
             "6": "A chi hai inviato un messaggio oggi?",
-            "7": "Hai giocato alla lotteria?",
+            "7": "Qual è una domanda a cui stai cercando risposta nella tua vita?",
             "8": "È capitata una cosa divertente mentre ______________.",
             "9": "Nomina una cosa che dovresti buttare, ma non lo fai.",
             "10": "Cosa ti ha reso soddisfatto di te stesso di recente?",
             "11": "Chi hai visto più spesso oggi?",
             "12": "Chi ti ispira?",
-            "13": "Quanta benzina c’è in ogni tanica?",
-            "14": "Cos’ha detto il tuo oroscopo oggi? Ha azzeccato?",
+            "13": "Hai parlato con un amico oggi?",
+            "14": "Se potessi viaggiare ovunque nel mondo, dove andresti?",
             "15": "Di cosa hai più paura?",
-            "16": "Qual è la missione più grande che hai intrapreso?",
+            "16": "Hai chiesto aiuto a qualcuno oggi?",
             "17": "Cosa sei riuscito a portare a termine oggi?",
             "18": "Ti sei comportato da persona matura oggi?",
             "19": "È stata una giornata impegnativa?",
             "20": "Quali scadenze avevi?",
-            "21": "Qual è il tuo indirizzo?",
+            "21": "Qual è la prima cosa che fai al mattino?",
             "22": "Cosa non vorresti ci fosse, o ce ne fosse meno, al mondo?",
             "23": "Cosa ti ferma?",
             "24": "Quali erano i tuoi obiettivi del giorno?",
