update august translations

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -234,37 +234,37 @@
             "31": "Who is your craziest friend?"
         },
         "7": {
-            "1": "Cosa hai mangiato a pranzo oggi?",
-            "2": "Cosa hai abbandonato?",
-            "3": "Cosa vuoi terminare domani?",
-            "4": "Qual è l’ultimo regalo che hai fatto?",
-            "5": "L’ultima volta che mi sono allenato ______________.",
-            "6": "Cos’hai creato oggi?",
-            "7": "Quale ricordo ti è passato per la mente oggi?",
-            "8": "Qual è l’ultimo rischio che hai corso?",
-            "9": "Cosa ti fa scendere a compromessi?",
-            "10": "Hai pensato a qualcuno in particolare oggi? Chi e perché?",
-            "11": "In una scala da 1 a 10 la mia giornata è stata ______________.",
-            "12": "Cosa dice l’ultimo messaggio che hai ricevuto?",
-            "13": "Devi dei soldi a qualcuno?",
-            "14": "Qual è la parte del tuo corpo che preferisci?",
-            "15": "Qual è la cosa peggiore che hai mangiato oggi?",
-            "16": "Spero che nessuno stesse guardando mentre ______________.",
-            "17": "Quanti chilometri hai percorso oggi?",
-            "18": "Chi è stata la prima persona che hai visto oggi?",
-            "19": "Qual è la tua più grande fobia?",
-            "20": "Qual è stato il tuo primo pensiero oggi?",
-            "21": "È pieno il tuo frigorifero?",
-            "22": "Qual è stata l’ultima cosa salutare che hai fatto per te stesso?",
-            "23": "Cosa hai dovuto aspettare oggi?",
-            "24": "Cos’hai vinto?",
-            "25": "Chi ha influenzato maggiormente la tua giornata?",
-            "26": "Da cosa hai imparato oggi?",
-            "27": "Qual è stato il momento più bello oggi?",
-            "28": "Per cosa l’hai pagata?",
-            "29": "Cosa vuoi imparare di più?",
-            "30": "Quale programma ti rifiuti di guardare?",
-            "31": "Quanto è una tazza di latte?"
+            "1": "What did you eat for lunch today?",
+            "2": "What did you give up?",
+            "3": "What do you want to finish tomorrow?",
+            "4": "What is the last gift you gave?",
+            "5": "The last time I worked out ______________.",
+            "6": "What did you create today?",
+            "7": "What memory crossed your mind today?",
+            "8": "What is the last risk you took?",
+            "9": "What makes you compromise?",
+            "10": "Did you think about anyone in particular today? Who and why?",
+            "11": "On a scale of 1 to 10, my day was ______________.",
+            "12": "What does the last message you received say?",
+            "13": "Do you owe money to anyone?",
+            "14": "What is your favorite part of your body?",
+            "15": "What is the worst thing you ate today?",
+            "16": "I hope no one was watching while ______________.",
+            "17": "How many kilometers did you travel today?",
+            "18": "Who was the first person you saw today?",
+            "19": "What is the strongest feeling you are experiencing right now?",
+            "20": "What was your first thought today?",
+            "21": "Is your refrigerator full?",
+            "22": "What was the last healthy thing you did for yourself?",
+            "23": "What did you have to wait for today?",
+            "24": "What did you win?",
+            "25": "Who influenced your day the most?",
+            "26": "What did you learn from today?",
+            "27": "What was the best moment today?",
+            "28": "What did you pay for it?",
+            "29": "What do you want to learn more about?",
+            "30": "What show do you refuse to watch?",
+            "31": "If you could paint a picture of your day, what would it depict?"
         },
         "8": {
             "1": "Quale decisione non vorresti mai dover prendere?",
