--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -252,7 +252,7 @@
             "16": "Spero che nessuno stesse guardando mentre ______________.",
             "17": "Quanti chilometri hai percorso oggi?",
             "18": "Chi è stata la prima persona che hai visto oggi?",
-            "19": "Qual è la tua più grande fobia?",
+            "19": "Qual è la sensazione più forte che provi in questo momento?",
             "20": "Qual è stato il tuo primo pensiero oggi?",
             "21": "È pieno il tuo frigorifero?",
             "22": "Qual è stata l’ultima cosa salutare che hai fatto per te stesso?",
@@ -264,7 +264,7 @@
             "28": "Per cosa l’hai pagata?",
             "29": "Cosa vuoi imparare di più?",
             "30": "Quale programma ti rifiuti di guardare?",
-            "31": "Quanto è una tazza di latte?"
+            "31": "Se potessi dipingere un quadro della tua giornata, cosa rappresenterebbe?"
         },
         "8": {
             "1": "Quale decisione non vorresti mai dover prendere?",
