update september translations

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -267,36 +267,36 @@
             "31": "If you could paint a picture of your day, what would it depict?"
         },
         "8": {
-            "1": "Quale decisione non vorresti mai dover prendere?",
-            "2": "Cosa ti incuriosisce?",
-            "3": "Qual è l'ultima cosa che hai imparato?",
-            "4": "Dove vorresti andare?",
-            "5": "L’ultima volta che sei stato dal medico ______________.",
-            "6": "Quale piccolo gesto di gentilezza hai ricevuto o compiuto oggi?",
-            "7": "Qual è l’ultima cosa per cui ti senti in colpa?",
-            "8": "La mia vita sarebbe più semplice se ______________.",
-            "9": "Qualcuno ti deve dei soldi?",
-            "10": "Quando è stata l’ultima volta in cui intenzionalmente hai perso tempo?",
-            "11": "Qual è il tuo gadget preferito?",
-            "12": "Il dispositivo che uso più spesso è ______________.",
-            "13": "Come hai trascorso il tuo tempo libero oggi?",
-            "14": "Eri stressato oggi? Perché?",
-            "15": "Qual è stata l’ultima cosa che hai detto a qualcuno oggi?",
-            "16": "Chi è uscito di testa all’ultima festa a cui hai partecipato?",
-            "17": "Cosa è andato alla perfezione oggi?",
-            "18": "Quanti anni credi di avere?",
-            "19": "Oddio! ______________.",
-            "20": "Perché ti sei sentito sotto pressione oggi?",
-            "21": "L’ultimo regalo che ho ricevuto è stato ______________.",
-            "22": "Se potessi cambiare oggi lo faresti?",
-            "23": "Credo ______________.",
-            "24": "Cosa speravi di poter evitare oggi?",
-            "25": "Eri padrone delle situazioni oggi?",
-            "26": "Cosa ha reso fruttuosa questa giornata?",
-            "27": "Sei stato in grado di ascoltare oggi?",
-            "28": "Non ______________ mai ______________.",
-            "29": "Hai infranto la legge? Come?",
-            "30": "Ti sei annoiato oggi?"
+            "1": "What decision would you never want to have to make?",
+            "2": "What are you curious about?",
+            "3": "What is the last thing you learned?",
+            "4": "Where would you like to go?",
+            "5": "The last time you went to the doctor ______________.",
+            "6": "What small act of kindness did you receive or perform today?",
+            "7": "What is the last thing you feel guilty about?",
+            "8": "My life would be easier if ______________.",
+            "9": "Does anyone owe you money?",
+            "10": "When was the last time you intentionally wasted time?",
+            "11": "What is your favorite gadget?",
+            "12": "The device I use most often is ______________.",
+            "13": "How did you spend your free time today?",
+            "14": "Were you stressed today? Why?",
+            "15": "What was the last thing you said to someone today?",
+            "16": "Who went wild at the last party you attended?",
+            "17": "What went perfectly today?",
+            "18": "How old do you think you are?",
+            "19": "Oh my God! ______________.",
+            "20": "Why did you feel pressured today?",
+            "21": "The last gift I received was ______________.",
+            "22": "If you could change today, would you?",
+            "23": "I believe ______________.",
+            "24": "What did you hope to avoid today?",
+            "25": "Were you in control of the situations today?",
+            "26": "What made this day fruitful?",
+            "27": "Were you able to listen today?",
+            "28": "Never ______________ ______________.",
+            "29": "Did you break the law? How?",
+            "30": "Were you bored today?"
         },
         "9": {
             "1": "Chi è l’ultima persona con cui hai passato del tempo piacevolmente?",
