--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -282,7 +282,7 @@
             "13": "Come hai trascorso il tuo tempo libero oggi?",
             "14": "Eri stressato oggi? Perché?",
             "15": "Qual è stata l’ultima cosa che hai detto a qualcuno oggi?",
-            "16": "Chi è uscito di testa all’ultima festa a cui hai partecipato?",
+            "16": "Chi si è scatenato all’ultima festa a cui hai partecipato?",
             "17": "Cosa è andato alla perfezione oggi?",
             "18": "Quanti anni credi di avere?",
             "19": "Oddio! ______________.",
