update october translations

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -299,37 +299,37 @@
             "30": "Were you bored today?"
         },
         "9": {
-            "1": "Chi è l’ultima persona con cui hai passato del tempo piacevolmente?",
-            "2": "Chi hai abbracciato oggi?",
-            "3": "Descrivi la tua giornata in una parola.",
-            "4": "Come stai?",
-            "5": "Hai parlato o ascoltato di più oggi?",
-            "6": "Quant’è una pinta di birra?",
-            "7": "Qual è l’ultima cosa stupida che hai fatto?",
-            "8": "Qual è il prossimo libro che leggerai?",
-            "9": "Cos’hai sbagliato?",
-            "10": "Hai avuto un'intuizione o un'idea interessante oggi?",
-            "11": "Qual è il tuo obiettivo?",
-            "12": "Se qualcuno dovesse descrivere il tuo comportamento di oggi con una parola, questa sarebbe ______________.",
-            "13": "Hai avuto una conversazione che ti ha fatto riflettere?",
-            "14": "Descrivi l’ultimo oggetto di arredo che hai acquistato.",
-            "15": "A che ora ti sei alzato oggi?",
-            "16": "Descrivi l’ultima volta che hai provato imbarazzo.",
-            "17": "Come sei migliorato oggi?",
-            "18": "Quanto tempo hai passato fuori casa oggi?",
-            "19": "Il prossimo anno, cosa speri caratterizzi la tua vita?",
-            "20": "Chi nella tua famiglia ha un talento straordinario? Quale?",
-            "21": "Cosa vorresti ci fosse di più nel mondo?",
-            "22": "Il mio suono preferito è ______________.",
-            "23": "Quale impatto speri di avere sul mondo?",
-            "24": "Se potessi fare le leggi, quale sarebbe quella di oggi?",
-            "25": "Descrivi l’ultimo episodio che ti ha sconvolto la vita.",
-            "26": "Quale opportunità stai aspettando?",
-            "27": "Quante email hai ricevuto oggi?",
-            "28": "Qual è l’ultimo film che hai visto?",
-            "29": "Stai preparando qualcosa?",
-            "30": "Cosa ti sta ostacolando?",
-            "31": "Qual è il titolo più interessante letto sul giornale di oggi?"
+            "1": "Who is the last person you had a pleasant time with?",
+            "2": "Who did you hug today?",
+            "3": "Describe your day in one word.",
+            "4": "How are you?",
+            "5": "Did you talk or listen more today?",
+            "6": "What do you hope to remember about this week in a year?",
+            "7": "What is the last silly thing you did?",
+            "8": "What is the next book you will read?",
+            "9": "What did you do wrong?",
+            "10": "Did you have an insight or an interesting idea today?",
+            "11": "What is your goal?",
+            "12": "If someone had to describe your behavior today in one word, it would be ______________.",
+            "13": "Did you have a conversation that made you think?",
+            "14": "Describe the last piece of furniture you bought.",
+            "15": "What time did you get up today?",
+            "16": "Describe the last time you felt embarrassed.",
+            "17": "How did you improve today?",
+            "18": "How much time did you spend outside today?",
+            "19": "Next year, what do you hope will characterize your life?",
+            "20": "Who in your family has an extraordinary talent? What is it?",
+            "21": "What would you like there to be more of in the world?",
+            "22": "My favorite sound is ______________.",
+            "23": "What impact do you hope to have on the world?",
+            "24": "If you could make laws, what would today's law be?",
+            "25": "Describe the last episode that shook your life.",
+            "26": "What opportunity are you waiting for?",
+            "27": "How many emails did you receive today?",
+            "28": "What is the last movie you watched?",
+            "29": "Are you preparing something?",
+            "30": "What is hindering you?",
+            "31": "What is the most interesting headline you read in today's newspaper?"
         },
         "10": {
             "1": "Quale decisione sei soddisfatto di aver preso?",
