--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -304,7 +304,7 @@
             "3": "Descrivi la tua giornata in una parola.",
             "4": "Come stai?",
             "5": "Hai parlato o ascoltato di più oggi?",
-            "6": "Quant’è una pinta di birra?",
+            "6": "Cosa speri di ricordare di questa settimana tra un anno?",
             "7": "Qual è l’ultima cosa stupida che hai fatto?",
             "8": "Qual è il prossimo libro che leggerai?",
             "9": "Cos’hai sbagliato?",
