update november and december translations

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -332,69 +332,69 @@
             "31": "What is the most interesting headline you read in today's newspaper?"
         },
         "10": {
-            "1": "Quale decisione sei soddisfatto di aver preso?",
-            "2": "Dai un buon consiglio.",
-            "3": "Da cosa era occupata la tua mente oggi?",
-            "4": "Qual è stata la miglior conversazione oggi?",
-            "5": "Ami il tuo lavoro?",
-            "6": "Se potessi eliminare una tua abitudine, quale sarebbe?",
-            "7": "Elenca 5 cose che avresti voluto avere con te oggi.",
-            "8": "Quali sono le conquiste personali delle quali sei più orgoglioso?",
-            "9": "Quali accessori hai indossato oggi?",
-            "10": "Cosa ti ha sconvolto?",
-            "11": "Qual è stata l’ultima bugia che hai raccontato?",
-            "12": "Qual è la tua cucina preferita?",
-            "13": "Di cosa hai ‘troppo’?",
-            "14": "Cosa ti vorresti dire tra un anno?",
-            "15": "Qual è la tua più grande forza?",
-            "16": "A parte i tuoi vestiti, cosa hai avuto con te per la maggior parte del tempo oggi?",
-            "17": "Qual è il tuo peccato più soddisfacente?",
-            "18": "Cosa ti dà noia?",
-            "19": "Hai fatto qualcosa di cui vai particolarmente fiero oggi?",
-            "20": "Che impressione hai fatto sugli altri oggi?",
-            "21": "Cosa hai lasciato perdere oggi?",
-            "22": "Come ti sei comportato oggi?",
-            "23": "Come lo sai?",
-            "24": "Elenca le ultime 3 cose che hai utilizzato oggi.",
-            "25": "Quale suono o rumore non sopporti?",
-            "26": "Ti senti apprezzato?",
-            "27": "Il mio corpo è ______________.",
-            "28": "Oggi ho ______________ troppo/a/e/i ______________.",
-            "29": "Quale oggetto possiedi che ti ricorda un bel momento del passato?",
-            "30": "Cosa hai dovuto fare oggi?"
+            "1": "What decision are you satisfied with making?",
+            "2": "Give some good advice.",
+            "3": "What occupied your mind today?",
+            "4": "What was the best conversation today?",
+            "5": "Do you love your job?",
+            "6": "If you could eliminate one of your habits, what would it be?",
+            "7": "List 5 things you wish you had with you today.",
+            "8": "What personal achievements are you most proud of?",
+            "9": "What accessories did you wear today?",
+            "10": "Which song would best describe your mood today?",
+            "11": "What is the last lie you told?",
+            "12": "What is your favorite cuisine?",
+            "13": "What do you have ‘too much’ of?",
+            "14": "What would you like to say to yourself in a year?",
+            "15": "What is your greatest strength?",
+            "16": "Apart from your clothes, what did you have with you most of the time today?",
+            "17": "What is your most satisfying guilty pleasure?",
+            "18": "What annoys you?",
+            "19": "Did you do something you are particularly proud of today?",
+            "20": "What impression did you make on others today?",
+            "21": "What did you let go of today?",
+            "22": "How did you behave today?",
+            "23": "Did you offer your help to someone today?",
+            "24": "List the last 3 things you used today.",
+            "25": "What sound or noise can you not stand?",
+            "26": "Do you feel appreciated?",
+            "27": "My body is ______________.",
+            "28": "Today I ______________ too much/many ______________.",
+            "29": "What object do you own that reminds you of a beautiful moment from the past?",
+            "30": "What did you have to do today?"
         },
         "11": {
-            "1": "Chi è il tuo migliore amico?",
-            "2": "Vorrei davvero ______________.",
-            "3": "C'è stato un momento in cui ti sei sentito particolarmente connesso con qualcuno?",
-            "4": "Quale ricordo vuoi conservare di oggi?",
-            "5": "Se potessi cenare con una persona, viva o morta, chi sceglieresti?",
-            "6": "Cosa ti fa sciogliere?",
-            "7": "Che lavoro avresti voluto fare?",
-            "8": "Quale relazione hai coltivato oggi?",
-            "9": "Cosa ti appassiona?",
-            "10": "Domani credo di dover ______________.",
-            "11": "Invidi qualcuno?",
-            "12": "Una cosa strana successa oggi?",
-            "13": "Quanto sei stato da solo oggi?",
-            "14": "Come stai cercando di ampliare la tua mente?",
-            "15": "Quali parole stai usando spesso ultimamente?",
-            "16": "Come è andata la giornata oggi?",
-            "17": "Qual è stata la prima cosa che hai visto quando ti sei svegliato stamattina?",
-            "18": "Elenca 3 cose che devi fare domani.",
-            "19": "Qual è l’ultimo sito online che hai visitato?",
-            "20": "Oggi ho scelto di ______________.",
-            "21": "Oggi avevi pensieri positivi o negativi?",
-            "22": "Chi è la persona più forte che conosci e perché?",
-            "23": "Chi avresti voluto prendesse parte alla tua giornata?",
-            "24": "Qual è una cosa che ti è stata detta oggi e non vuoi dimenticare?",
-            "25": "Qual è stata la tua debolezza oggi?",
-            "26": "Il genere musicale che ascolto più spesso è ______________.",
-            "27": "Quanto hai mangiato oggi?",
-            "28": "Per cosa vale la pena combattere?",
-            "29": "Oggi mi sono sentito ______________.",
-            "30": "Oggi eri più sorridente o corrucciato?",
-            "31": "Quali progressi stai facendo?"
+            "1": "If time were not an issue, what would you do?",
+            "2": "I really wish ______________.",
+            "3": "Was there a moment when you felt particularly connected with someone?",
+            "4": "What memory do you want to keep from today?",
+            "5": "If you could have dinner with one person, living or dead, who would you choose?",
+            "6": "What makes you melt?",
+            "7": "What job did you want to have?",
+            "8": "What relationship did you cultivate today?",
+            "9": "What are you passionate about?",
+            "10": "Tomorrow I think I have to ______________.",
+            "11": "Do you envy anyone?",
+            "12": "A strange thing that happened today?",
+            "13": "How much were you alone today?",
+            "14": "How are you trying to expand your mind?",
+            "15": "What words are you using often lately?",
+            "16": "How was your day today?",
+            "17": "What was the first thing you saw when you woke up this morning?",
+            "18": "List 3 things you have to do tomorrow.",
+            "19": "What is the last website you visited?",
+            "20": "Today I chose to ______________.",
+            "21": "Did you have positive or negative thoughts today?",
+            "22": "Who is the strongest person you know and why?",
+            "23": "Who would you have liked to be part of your day?",
+            "24": "What is one thing that was said to you today that you don't want to forget?",
+            "25": "What was your weakness today?",
+            "26": "The music genre I listen to most often is ______________.",
+            "27": "How much did you eat today?",
+            "28": "What is worth fighting for?",
+            "29": "Today I felt ______________.",
+            "30": "Were you more smiling or frowning today?",
+            "31": "What progress are you making?"
         }
     }
 }
