minor formatting fixes to questions

--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -19,8 +19,8 @@
             "10": "Cosa ti ha fatto sorridere oggi?",
             "11": "Qual è il tuo accessorio preferito?",
             "12": "Cosa ti sta rendendo arrabbiato?",
-            "13": "Cos'hai mangiato a cena?",
-            "14": "Cos'hai fatto oggi?",
+            "13": "Cos’hai mangiato a cena?",
+            "14": "Cos’hai fatto oggi?",
             "15": "Da chi hai ricevuto l’ultima telefonata?",
             "16": "Di chi sei innamorato?",
             "17": "Qual è la cosa più sciocca che hai fatto di recente?",
@@ -49,7 +49,7 @@
             "7": "Nomina una persona con la quale speravi di non avere a che fare oggi",
             "8": "Qual è la TV con lo schermo più grande a casa tua?",
             "9": "A che ora sei andato a dormire la scorsa notte?",
-            "10": "Cos'hai comprato oggi?",
+            "10": "Cos’hai comprato oggi?",
             "11": "Vorrei avere ______________.",
             "12": "Quante foto hai fatto/pubblicato oggi?",
             "13": "Quale libro stai leggendo oggi?",
@@ -108,7 +108,7 @@
             "2": "Cosa ti rende triste?",
             "3": "Oggi è stata una giornata ordinaria? Perché? Perché no?",
             "4": "Di chi ti fidi di più?",
-            "5": "Quand'è la tua prossima scadenza importante? Cosa riguarda?",
+            "5": "Quand’è la tua prossima scadenza importante? Cosa riguarda?",
             "6": "Cosa hai mangiato a colazione oggi?",
             "7": "Hai rimpianti oggi?",
             "8": "Come hai aggiunto un tocco di arte nella tua giornata oggi?",
@@ -229,7 +229,7 @@
             "26": "Con chi hai cenato?",
             "27": "In che modo hai fatto la differenza oggi?",
             "28": "Qual è la cosa che porti ovunque con te?",
-            "29": "C'è qualcuno che ti manca in questo momento?",
+            "29": "C’è qualcuno che ti manca in questo momento?",
             "30": "Cosa ti ha motivato oggi?",
             "31": "Chi è il tuo amico più folle?"
         },
@@ -269,7 +269,7 @@
         "8": {
             "1": "Quale decisione non vorresti mai dover prendere?",
             "2": "Cosa ti incuriosisce?",
-            "3": "Qual è l'ultima cosa che hai imparato?",
+            "3": "Qual è l’ultima cosa che hai imparato?",
             "4": "Dove vorresti andare?",
             "5": "L’ultima volta che sei stato dal medico ______________.",
             "6": "Quale piccolo gesto di gentilezza hai ricevuto o compiuto oggi?",
@@ -308,7 +308,7 @@
             "7": "Qual è l’ultima cosa stupida che hai fatto?",
             "8": "Qual è il prossimo libro che leggerai?",
             "9": "Cos’hai sbagliato?",
-            "10": "Hai avuto un'intuizione o un'idea interessante oggi?",
+            "10": "Hai avuto un’intuizione o un’idea interessante oggi?",
             "11": "Qual è il tuo obiettivo?",
             "12": "Se qualcuno dovesse descrivere il tuo comportamento di oggi con una parola, questa sarebbe ______________.",
             "13": "Hai avuto una conversazione che ti ha fatto riflettere?",
@@ -341,7 +341,7 @@
             "7": "Elenca 5 cose che avresti voluto avere con te oggi.",
             "8": "Quali sono le conquiste personali delle quali sei più orgoglioso?",
             "9": "Quali accessori hai indossato oggi?",
-            "10": "Quale canzone descriverebbe al meglio il tuo stato d'animo oggi?",
+            "10": "Quale canzone descriverebbe al meglio il tuo stato d’animo oggi?",
             "11": "Qual è stata l’ultima bugia che hai raccontato?",
             "12": "Qual è la tua cucina preferita?",
             "13": "Di cosa hai ‘troppo’?",
@@ -366,7 +366,7 @@
         "11": {
             "1": "Se il tempo non fosse un problema, cosa faresti?",
             "2": "Vorrei davvero ______________.",
-            "3": "C'è stato un momento in cui ti sei sentito particolarmente connesso con qualcuno?",
+            "3": "C’è stato un momento in cui ti sei sentito particolarmente connesso con qualcuno?",
             "4": "Quale ricordo vuoi conservare di oggi?",
             "5": "Se potessi cenare con una persona, viva o morta, chi sceglieresti?",
             "6": "Cosa ti fa sciogliere?",
