--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -344,7 +344,7 @@
             "10": "Which song would best describe your mood today?",
             "11": "What is the last lie you told?",
             "12": "What is your favorite cuisine?",
-            "13": "What do you have ‘too much’ of?",
+            "13": "What do you have 'too much' of?",
             "14": "What would you like to say to yourself in a year?",
             "15": "What is your greatest strength?",
             "16": "Apart from your clothes, what did you have with you most of the time today?",
