fix question typo

--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -32,7 +32,7 @@
             "23": "Cosa ha reso questa giornata insolita?",
             "24": "Cosa cerchi nella vita?",
             "25": "Qual è la tua bevanda preferita?",
-            "26": "Oggi la temperature era ______________.",
+            "26": "Oggi la temperatura era ______________.",
             "27": "Quanto hai speso al supermercato l’ultima volta?",
             "28": "Domani ______________.",
             "29": "Qual è stato il tuo ultimo acquisto importante?",
